lang/derive/tests/ui/fail/02-enum.rs
use liquid_lang as liquid;

use liquid::InOut;
#[derive(InOut)]
enum MyStruct {
    U32(u32),
    S(String),
}

fn main() {}
