lang/derive/tests/ui/fail/02-enum.stderr
error: enums are not supported to derive from `InOut` or `State`
 --> $DIR/02-enum.rs:5:1
  |
5 | enum MyStruct {
  | ^^^^
